# reserva

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
app/: .dockerignore  main.py
app/api/v1/endpoints/: role_router.py  user_router.py
app/core/: config.py  logging_config.py
app/core/exceptions/: __init__.py  base_exceptions.py  database_exceptions.py  http_exceptions.py  repository_exceptions.py  schemas.py
app/core/middleware/: __init__.py  cors.py  error_handling_middleware.py  logging_middleware.py
app/db/admin/: __init__.py  base.py  session.py
app/db/admin/migrations/: env.py
app/db/admin/migrations/versions/: 55de3bd45dcf_002.py  928739ddb5c4_001.py
app/db/tenant/: __init__.py  base.py  session.py
app/db/tenant/migrations/: env.py
app/db/tenant/migrations/versions/: 41bdc8cbd174_init.py
app/models/admin/: client.py  database.py  role.py  task.py  tenant.py  user.py  user_task.py  user_tenant.py
app/models/tenant/: appointment.py  professional.py  role.py  user.py
app/repositories/admin/: async_repository.py  base.py  role_repository.py  user_repository.py
app/schemas/admin/: client_schema.py  role_schema.py  user_schema.py
app/services/admin/: role_service.py  user_service.py
initdb/: init-client-db.sh
