[tool.poetry]
name = "reserva"
version = "0.1.0"
description = ""
authors = ["Jacob Vidal <firstcommand@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.114.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.34"}
alembic = "^1.13.2"
uvicorn = "^0.30.6"
pydantic = {extras = ["email"], version = "^2.9.1"}
asyncpg = "^0.29.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
